tests/neg/arg-eof.scala
object Test:
  case class Widget(name: String, other: Int = 5)
  Widget(name = "foo", // error